[package]
name = "txn-manager"
version = "0.1.0"
edition = "2021"
authors = ["Harsh Mahajan"]
description = "Transaction management service"

# Define both lib and bin targets
[[bin]]
name = "txn-manager"
path = "src/main.rs"

[lib]
name = "txn_manager"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = "0.7.3"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors", "limit"] }
tokio = { version = "1.34.0", features = ["full"] }
hyper = "1.0.1"

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "migrate", "bigdecimal"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
rust_decimal = { version = "1.33.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

# Authentication
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Error handling
thiserror = "1.0.50"
anyhow = "1.0.75"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging and configuration
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
config = "0.13.4"

# Testing
fake = { version = "2.9.1", features = ["derive", "uuid", "chrono"] }

[dev-dependencies]
tokio-test = "0.4.3"
reqwest = { version = "0.11.22", features = ["json"] }
mockall = "0.12.1"
criterion = "0.4.0"

[[bench]]
name = "transaction_benchmark"
harness = false
